fix: catching and wrapping more exceptions